--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -1,4 +1,7 @@
 block.Vault-mods-the-big-one.name = "The Big one"
 block.Vault-mods-the-big-one.description = "The Big One"
 
+block.Vault-mods-small-storage.name = "Small Storage"
+block.Vault-mods-small-torage.description = "A small storage unit"
+
 
